<resources>
    <string name="app_name">Guess The Number</string>
    <string name="creator_sign">Designed and produced by istiklal güneş creative software</string>
    <string name="all_rights">all rights reserved 2022@</string>
    <string name="title">GUESS THE NUMBER</string>
    <string name="user_name_placeholder">Player Name</string>
    <string name="play_button_text">PLAY</string>
    <string name="change_user_text">CHANGE USER</string>

    <string name="game_selection_title">SELECT GAME</string>
    <string name="game_selection_single_player">SINGLE PLAYER GAME</string>
    <string name="game_selection_play_with_machine">GAME WITH MACHINE</string>
    <string name="game_selection_multi_player">MULTI PLAYER GAME</string>

    <string name="single_player_title">MACHINE PICKED A NUMBER, GUESS IT</string>
    <string name="guess_button_text">MAKE A GUESS</string>
    <string name="score_line_label">Score : </string>

    <!--    Table titles -->
    <string name="guess_counter_title"> # </string>
    <string name="guess_number_title">Your Guess</string>
    <string name="guess_in_place_title">Right Place</string>
    <string name="guess_not_in_place_title">Wrong Place</string>
    <string name="guess_score_title">Score</string>

    <!--    Game Result Strings -->
    <string name="game_winner_title">YOU ARE THE WINNER</string>
    <string name="game_winner_text">Congratulations, You got the number, your score %s</string>
    <string name="game_winner_great_score_text">WOW, awesome!! You won with score %s</string>
    <string name="game_winner_new_max_text">WOW, awesome!! Your new max score is %s</string>

    <string name="game_result_positive_button_text">RESTART</string>
    <string name="game_result_negative_button_text">QUIT</string>


    <!--    Toast message text -->
    <string name="empty_payer_name_warning">Give a player name </string>
    <string name="invalid_payer_name_warning">Please give a valid player name </string>
    <string name="best_wishes_1">Have a great time </string>
    <string name="max_score_notify">Your current max score is </string>

    <string name="missing_digit_warning">There is missing digit, check yor guess, it must be 4 digit </string>
    <string name="start_with_zero_warning">4 digit number can not start with 0 !! </string>
    <string name="repeating_number_warning">There are repeating numbers in your guess !! </string>

    <string name="coming_soon_title">Coming soon ..</string>
    <string name="coming_soon_message">This part will be available next update.</string>
    <string name="coming_soon_toast">Thank you</string>


    <!--    Content Descriptions -->
    <string name="single_player_image_button">Single Player Button</string>
    <string name="game_with_machine_image_button">Play With Machine Button</string>
    <string name="multi_player_image_button">Multi Player Button</string>

    <!--    Alert strings -->
    <string name="alert_positive_button_text">OK</string>
    <string name="alert_negative_button_text">CANCEL</string>

</resources>