<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameSelectionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_background"
    android:textAlignment="center"
    tools:context=".view.GameSelectionActivity">

    <TextView
        android:id="@+id/gameSelectionTitle"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_selection_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/verticalContainer"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameSelectionTitle">

        <LinearLayout
            android:id="@+id/singlePlayerContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/singlePlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/single_player_image_button"
                android:onClick="playSinglePlayer"
                android:padding="5dp"
                app:srcCompat="@drawable/single_player_image_button" />

            <TextView
                android:id="@+id/singlePlayerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/game_selection_single_player"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/withMachineContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/withMachineButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/game_with_machine_image_button"
                android:onClick="playWithMachine"
                android:padding="5dp"
                app:srcCompat="@drawable/play_with_machine_image_button" />

            <TextView
                android:id="@+id/withMachineText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/game_selection_play_with_machine"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/multiPlayerContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/multiPlayerButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/multi_player_image_button"
                android:onClick="playMultiPlayer"
                android:padding="5dp"
                app:srcCompat="@drawable/multi_player_image_button" />

            <TextView
                android:id="@+id/multiPlayerText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/game_selection_multi_player"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>