<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/numbers_in_bubbles_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/brandGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="38sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/playerNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/user_name_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandGreeting" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:onClick="gameSelectionScreen"
        android:text="@string/play_button_text"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNameInput"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/changeUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="185dp"
        android:onClick="changeUserName"
        android:text="@string/change_user_text"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/footerMain1"
        android:layout_width="391dp"
        android:layout_height="0dp"
        android:text="@string/creator_sign"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/footerMain2"
        app:layout_constraintEnd_toEndOf="@+id/footerMain2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/footerMain2"
        android:layout_width="224dp"
        android:layout_height="17dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/all_rights"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>